--- a/package.json
+++ b/package.json
@@ -1,11 +1,29 @@
 {
-  "name": "pebisnis-ulung-tpl",
-  "version": "1.0.0",
-  "description": "",
+  "name": "tpl-skeleton",
+  "version": "0.1.0",
+  "description": "HTML template skeleton based on gulp, scss, and twig for template creator",
   "main": "index.js",
   "scripts": {
+    "start": "gulp",
+    "build": "gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Asis Pattisahusiwa <asis.pattisahusiwa@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "browser-sync": "^2.27.7",
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-data": "^1.3.1",
+    "gulp-if": "^3.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^9.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-twig": "^1.2.0",
+    "postcss": "^8.4.4",
+    "sass": "^1.44.0"
+  }
 }
